<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_below="@id/toolbar"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:background="@drawable/weather"
        tools:context="com.pathantalabs.weatherreportupdate.MainActivity">


        <android.support.v7.widget.CardView
            android:id="@+id/toolsWeather"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardCornerRadius="3dp"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mic_Button"
                    android:src="@drawable/ic_mic_input"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:contentDescription="@string/mic_button"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/tts_Button"
                    android:layout_weight="1"
                    android:src="@drawable/ic_volume"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:contentDescription="@string/tts_button"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/search_Button"
                    android:layout_weight="1"
                    android:src="@drawable/ic_search_text"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:contentDescription="@string/search_city"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

<com.google.android.gms.plus.PlusOneButton
    android:id="@+id/googlePlus"
    android:layout_width="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/toolsWeather"
    android:layout_marginTop="8dp"
    plus:anotation="inline"
    plus:size="medium"
    android:layout_height="wrap_content">

</com.google.android.gms.plus.PlusOneButton>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/googlePlus"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="3dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/city_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="26sp"
                    android:textColor="@color/all_text_color"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/city_name"
                    android:textColor="@color/all_text_color"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/temp_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/status"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:textColor="#000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/weather_icon"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/image_weathericon"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/icon_weather"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/windText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/temp_city"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/all_text_color"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/cloud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/windText"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/all_text_color"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cloud"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/all_text_color"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pressure"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/all_text_color"
                    android:textSize="@dimen/text_size" />

                <!--<TextView
                    android:id="@+id/UVIndex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/humidity"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/all_text_color"
                    android:textSize="@dimen/text_size" />-->


                <ImageView
                    android:id="@+id/share_weather"
                    android:contentDescription="@string/share_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:clickable="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignRight="@id/humidity"
                    android:src="@drawable/ic_share" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/nativeAdCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardView"
            android:layout_margin="12dp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nativeAdCardView"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="3dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">

                <TextView
                    android:id="@+id/more_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/more_details"
                    android:textSize="24sp" />

                <LinearLayout
                    android:id="@+id/linear_latLong"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/more_details"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_nav_lat_long"
                            android:text="@string/latitude"
                            android:textColor="@color/all_text_color"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/latitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:text=""
                            android:textColor="@color/all_text_color"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_nav_lat_long"
                            android:text="@string/longitude"
                            android:textColor="@color/all_text_color"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/longitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:text=""
                            android:textColor="@color/all_text_color"
                            android:textSize="18sp"
                            tools:ignore="RtlHardcoded" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/minMaxTempLinear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/linear_latLong"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/max_temp_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_nav_max_temp"
                            android:text="@string/max_temp"
                            android:textColor="@color/all_text_color"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/max_temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:textColor="@color/all_text_color"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/min_temp_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_nav_min_temp"
                            android:text="@string/min_temp"
                            android:textColor="@color/all_text_color"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/min_temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:textColor="@color/all_text_color"
                            android:textSize="16sp"
                            tools:ignore="RtlHardcoded" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sunRiseSet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/minMaxTempLinear"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_sunrise"
                            android:text="@string/sunrise"
                            android:textColor="@color/all_text_color"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/sunriseValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text=""
                            android:textColor="@color/all_text_color"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_sunset"
                            android:text="@string/sunset"
                            android:textAlignment="center"
                            android:textColor="@color/all_text_color"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/sunsetValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text=""
                            android:textColor="@color/all_text_color"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sunRiseSet"
                    android:layout_marginTop="6dp"
                    android:text="@string/sunriseWarning"
                    android:textColor="#f23a3a"
                    android:textSize="12sp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>
    </RelativeLayout>